添加生命周期、V层和P层绑定的代理功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Utils</string>
     <string name="btn_download_pic">下载图片</string>
+    <string name="exception_presenter_is_null">Presenter is null!!</string>
 </resources>
